// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar renders correctly with props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchBar
    getFilms={[Function]}
    getPeople={[Function]}
    history={
      Object {
        "push": [Function],
      }
    }
    searchQuery=""
    searchType="title"
    setSearchType={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <div
        id="search-bar"
      >
        <h2>
          FIND YOUR MOVIE
        </h2>
        <form
          onSubmit={[Function]}
        >
          <input
            autoComplete="off"
            defaultValue=""
            name="searchLine"
            placeholder="Pulp Fiction"
            type="text"
          />
          <div
            id="search-props"
          >
            <span>
              SEARCH BY
            </span>
            <label
              className="prop btn btn-primary"
            >
              <input
                checked={true}
                onChange={[Function]}
                type="radio"
                value="title"
              />
              TITLE
            </label>
            <label
              className="prop btn btn-basic"
            >
              <input
                checked={false}
                onChange={[Function]}
                type="radio"
                value="person"
              />
              DIRECTOR
            </label>
          </div>
          <button
            className="btn btn-primary btn-search"
            type="submit"
          >
            SEARCH
          </button>
        </form>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            FIND YOUR MOVIE
          </h2>,
          <form
            onSubmit={[Function]}
          >
            <input
              autoComplete="off"
              defaultValue=""
              name="searchLine"
              placeholder="Pulp Fiction"
              type="text"
            />
            <div
              id="search-props"
            >
              <span>
                SEARCH BY
              </span>
              <label
                className="prop btn btn-primary"
              >
                <input
                  checked={true}
                  onChange={[Function]}
                  type="radio"
                  value="title"
                />
                TITLE
              </label>
              <label
                className="prop btn btn-basic"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  type="radio"
                  value="person"
                />
                DIRECTOR
              </label>
            </div>
            <button
              className="btn btn-primary btn-search"
              type="submit"
            >
              SEARCH
            </button>
          </form>,
        ],
        "id": "search-bar",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "FIND YOUR MOVIE",
          },
          "ref": null,
          "rendered": "FIND YOUR MOVIE",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                autoComplete="off"
                defaultValue=""
                name="searchLine"
                placeholder="Pulp Fiction"
                type="text"
              />,
              <div
                id="search-props"
              >
                <span>
                  SEARCH BY
                </span>
                <label
                  className="prop btn btn-primary"
                >
                  <input
                    checked={true}
                    onChange={[Function]}
                    type="radio"
                    value="title"
                  />
                  TITLE
                </label>
                <label
                  className="prop btn btn-basic"
                >
                  <input
                    checked={false}
                    onChange={[Function]}
                    type="radio"
                    value="person"
                  />
                  DIRECTOR
                </label>
              </div>,
              <button
                className="btn btn-primary btn-search"
                type="submit"
              >
                SEARCH
              </button>,
            ],
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "autoComplete": "off",
                "defaultValue": "",
                "name": "searchLine",
                "placeholder": "Pulp Fiction",
                "type": "text",
              },
              "ref": [Function],
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span>
                    SEARCH BY
                  </span>,
                  <label
                    className="prop btn btn-primary"
                  >
                    <input
                      checked={true}
                      onChange={[Function]}
                      type="radio"
                      value="title"
                    />
                    TITLE
                  </label>,
                  <label
                    className="prop btn btn-basic"
                  >
                    <input
                      checked={false}
                      onChange={[Function]}
                      type="radio"
                      value="person"
                    />
                    DIRECTOR
                  </label>,
                ],
                "id": "search-props",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": "SEARCH BY",
                  },
                  "ref": null,
                  "rendered": "SEARCH BY",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <input
                        checked={true}
                        onChange={[Function]}
                        type="radio"
                        value="title"
                      />,
                      "TITLE",
                    ],
                    "className": "prop btn btn-primary",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "checked": true,
                        "onChange": [Function],
                        "type": "radio",
                        "value": "title",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                    "TITLE",
                  ],
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <input
                        checked={false}
                        onChange={[Function]}
                        type="radio"
                        value="person"
                      />,
                      "DIRECTOR",
                    ],
                    "className": "prop btn btn-basic",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "checked": false,
                        "onChange": [Function],
                        "type": "radio",
                        "value": "person",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                    "DIRECTOR",
                  ],
                  "type": "label",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "SEARCH",
                "className": "btn btn-primary btn-search",
                "type": "submit",
              },
              "ref": null,
              "rendered": "SEARCH",
              "type": "button",
            },
          ],
          "type": "form",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <div
          id="search-bar"
        >
          <h2>
            FIND YOUR MOVIE
          </h2>
          <form
            onSubmit={[Function]}
          >
            <input
              autoComplete="off"
              defaultValue=""
              name="searchLine"
              placeholder="Pulp Fiction"
              type="text"
            />
            <div
              id="search-props"
            >
              <span>
                SEARCH BY
              </span>
              <label
                className="prop btn btn-primary"
              >
                <input
                  checked={true}
                  onChange={[Function]}
                  type="radio"
                  value="title"
                />
                TITLE
              </label>
              <label
                className="prop btn btn-basic"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  type="radio"
                  value="person"
                />
                DIRECTOR
              </label>
            </div>
            <button
              className="btn btn-primary btn-search"
              type="submit"
            >
              SEARCH
            </button>
          </form>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2>
              FIND YOUR MOVIE
            </h2>,
            <form
              onSubmit={[Function]}
            >
              <input
                autoComplete="off"
                defaultValue=""
                name="searchLine"
                placeholder="Pulp Fiction"
                type="text"
              />
              <div
                id="search-props"
              >
                <span>
                  SEARCH BY
                </span>
                <label
                  className="prop btn btn-primary"
                >
                  <input
                    checked={true}
                    onChange={[Function]}
                    type="radio"
                    value="title"
                  />
                  TITLE
                </label>
                <label
                  className="prop btn btn-basic"
                >
                  <input
                    checked={false}
                    onChange={[Function]}
                    type="radio"
                    value="person"
                  />
                  DIRECTOR
                </label>
              </div>
              <button
                className="btn btn-primary btn-search"
                type="submit"
              >
                SEARCH
              </button>
            </form>,
          ],
          "id": "search-bar",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "FIND YOUR MOVIE",
            },
            "ref": null,
            "rendered": "FIND YOUR MOVIE",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  autoComplete="off"
                  defaultValue=""
                  name="searchLine"
                  placeholder="Pulp Fiction"
                  type="text"
                />,
                <div
                  id="search-props"
                >
                  <span>
                    SEARCH BY
                  </span>
                  <label
                    className="prop btn btn-primary"
                  >
                    <input
                      checked={true}
                      onChange={[Function]}
                      type="radio"
                      value="title"
                    />
                    TITLE
                  </label>
                  <label
                    className="prop btn btn-basic"
                  >
                    <input
                      checked={false}
                      onChange={[Function]}
                      type="radio"
                      value="person"
                    />
                    DIRECTOR
                  </label>
                </div>,
                <button
                  className="btn btn-primary btn-search"
                  type="submit"
                >
                  SEARCH
                </button>,
              ],
              "onSubmit": [Function],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "autoComplete": "off",
                  "defaultValue": "",
                  "name": "searchLine",
                  "placeholder": "Pulp Fiction",
                  "type": "text",
                },
                "ref": [Function],
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span>
                      SEARCH BY
                    </span>,
                    <label
                      className="prop btn btn-primary"
                    >
                      <input
                        checked={true}
                        onChange={[Function]}
                        type="radio"
                        value="title"
                      />
                      TITLE
                    </label>,
                    <label
                      className="prop btn btn-basic"
                    >
                      <input
                        checked={false}
                        onChange={[Function]}
                        type="radio"
                        value="person"
                      />
                      DIRECTOR
                    </label>,
                  ],
                  "id": "search-props",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "SEARCH BY",
                    },
                    "ref": null,
                    "rendered": "SEARCH BY",
                    "type": "span",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <input
                          checked={true}
                          onChange={[Function]}
                          type="radio"
                          value="title"
                        />,
                        "TITLE",
                      ],
                      "className": "prop btn btn-primary",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": null,
                        "nodeType": "host",
                        "props": Object {
                          "checked": true,
                          "onChange": [Function],
                          "type": "radio",
                          "value": "title",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "input",
                      },
                      "TITLE",
                    ],
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <input
                          checked={false}
                          onChange={[Function]}
                          type="radio"
                          value="person"
                        />,
                        "DIRECTOR",
                      ],
                      "className": "prop btn btn-basic",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": null,
                        "nodeType": "host",
                        "props": Object {
                          "checked": false,
                          "onChange": [Function],
                          "type": "radio",
                          "value": "person",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "input",
                      },
                      "DIRECTOR",
                    ],
                    "type": "label",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "SEARCH",
                  "className": "btn btn-primary btn-search",
                  "type": "submit",
                },
                "ref": null,
                "rendered": "SEARCH",
                "type": "button",
              },
            ],
            "type": "form",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SearchBar renders correctly with searchQuery 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchBar
    getFilms={[Function]}
    getPeople={[Function]}
    history={
      Object {
        "push": [Function],
      }
    }
    searchQuery="test"
    searchType="title"
    setSearchType={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <div
        id="search-bar"
      >
        <h2>
          FIND YOUR MOVIE
        </h2>
        <form
          onSubmit={[Function]}
        >
          <input
            autoComplete="off"
            defaultValue="test"
            name="searchLine"
            placeholder="Pulp Fiction"
            type="text"
          />
          <div
            id="search-props"
          >
            <span>
              SEARCH BY
            </span>
            <label
              className="prop btn btn-primary"
            >
              <input
                checked={true}
                onChange={[Function]}
                type="radio"
                value="title"
              />
              TITLE
            </label>
            <label
              className="prop btn btn-basic"
            >
              <input
                checked={false}
                onChange={[Function]}
                type="radio"
                value="person"
              />
              DIRECTOR
            </label>
          </div>
          <button
            className="btn btn-primary btn-search"
            type="submit"
          >
            SEARCH
          </button>
        </form>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            FIND YOUR MOVIE
          </h2>,
          <form
            onSubmit={[Function]}
          >
            <input
              autoComplete="off"
              defaultValue="test"
              name="searchLine"
              placeholder="Pulp Fiction"
              type="text"
            />
            <div
              id="search-props"
            >
              <span>
                SEARCH BY
              </span>
              <label
                className="prop btn btn-primary"
              >
                <input
                  checked={true}
                  onChange={[Function]}
                  type="radio"
                  value="title"
                />
                TITLE
              </label>
              <label
                className="prop btn btn-basic"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  type="radio"
                  value="person"
                />
                DIRECTOR
              </label>
            </div>
            <button
              className="btn btn-primary btn-search"
              type="submit"
            >
              SEARCH
            </button>
          </form>,
        ],
        "id": "search-bar",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "FIND YOUR MOVIE",
          },
          "ref": null,
          "rendered": "FIND YOUR MOVIE",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                autoComplete="off"
                defaultValue="test"
                name="searchLine"
                placeholder="Pulp Fiction"
                type="text"
              />,
              <div
                id="search-props"
              >
                <span>
                  SEARCH BY
                </span>
                <label
                  className="prop btn btn-primary"
                >
                  <input
                    checked={true}
                    onChange={[Function]}
                    type="radio"
                    value="title"
                  />
                  TITLE
                </label>
                <label
                  className="prop btn btn-basic"
                >
                  <input
                    checked={false}
                    onChange={[Function]}
                    type="radio"
                    value="person"
                  />
                  DIRECTOR
                </label>
              </div>,
              <button
                className="btn btn-primary btn-search"
                type="submit"
              >
                SEARCH
              </button>,
            ],
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "autoComplete": "off",
                "defaultValue": "test",
                "name": "searchLine",
                "placeholder": "Pulp Fiction",
                "type": "text",
              },
              "ref": [Function],
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span>
                    SEARCH BY
                  </span>,
                  <label
                    className="prop btn btn-primary"
                  >
                    <input
                      checked={true}
                      onChange={[Function]}
                      type="radio"
                      value="title"
                    />
                    TITLE
                  </label>,
                  <label
                    className="prop btn btn-basic"
                  >
                    <input
                      checked={false}
                      onChange={[Function]}
                      type="radio"
                      value="person"
                    />
                    DIRECTOR
                  </label>,
                ],
                "id": "search-props",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": "SEARCH BY",
                  },
                  "ref": null,
                  "rendered": "SEARCH BY",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <input
                        checked={true}
                        onChange={[Function]}
                        type="radio"
                        value="title"
                      />,
                      "TITLE",
                    ],
                    "className": "prop btn btn-primary",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "checked": true,
                        "onChange": [Function],
                        "type": "radio",
                        "value": "title",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                    "TITLE",
                  ],
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <input
                        checked={false}
                        onChange={[Function]}
                        type="radio"
                        value="person"
                      />,
                      "DIRECTOR",
                    ],
                    "className": "prop btn btn-basic",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "checked": false,
                        "onChange": [Function],
                        "type": "radio",
                        "value": "person",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "input",
                    },
                    "DIRECTOR",
                  ],
                  "type": "label",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "SEARCH",
                "className": "btn btn-primary btn-search",
                "type": "submit",
              },
              "ref": null,
              "rendered": "SEARCH",
              "type": "button",
            },
          ],
          "type": "form",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <div
          id="search-bar"
        >
          <h2>
            FIND YOUR MOVIE
          </h2>
          <form
            onSubmit={[Function]}
          >
            <input
              autoComplete="off"
              defaultValue="test"
              name="searchLine"
              placeholder="Pulp Fiction"
              type="text"
            />
            <div
              id="search-props"
            >
              <span>
                SEARCH BY
              </span>
              <label
                className="prop btn btn-primary"
              >
                <input
                  checked={true}
                  onChange={[Function]}
                  type="radio"
                  value="title"
                />
                TITLE
              </label>
              <label
                className="prop btn btn-basic"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  type="radio"
                  value="person"
                />
                DIRECTOR
              </label>
            </div>
            <button
              className="btn btn-primary btn-search"
              type="submit"
            >
              SEARCH
            </button>
          </form>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2>
              FIND YOUR MOVIE
            </h2>,
            <form
              onSubmit={[Function]}
            >
              <input
                autoComplete="off"
                defaultValue="test"
                name="searchLine"
                placeholder="Pulp Fiction"
                type="text"
              />
              <div
                id="search-props"
              >
                <span>
                  SEARCH BY
                </span>
                <label
                  className="prop btn btn-primary"
                >
                  <input
                    checked={true}
                    onChange={[Function]}
                    type="radio"
                    value="title"
                  />
                  TITLE
                </label>
                <label
                  className="prop btn btn-basic"
                >
                  <input
                    checked={false}
                    onChange={[Function]}
                    type="radio"
                    value="person"
                  />
                  DIRECTOR
                </label>
              </div>
              <button
                className="btn btn-primary btn-search"
                type="submit"
              >
                SEARCH
              </button>
            </form>,
          ],
          "id": "search-bar",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "FIND YOUR MOVIE",
            },
            "ref": null,
            "rendered": "FIND YOUR MOVIE",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  autoComplete="off"
                  defaultValue="test"
                  name="searchLine"
                  placeholder="Pulp Fiction"
                  type="text"
                />,
                <div
                  id="search-props"
                >
                  <span>
                    SEARCH BY
                  </span>
                  <label
                    className="prop btn btn-primary"
                  >
                    <input
                      checked={true}
                      onChange={[Function]}
                      type="radio"
                      value="title"
                    />
                    TITLE
                  </label>
                  <label
                    className="prop btn btn-basic"
                  >
                    <input
                      checked={false}
                      onChange={[Function]}
                      type="radio"
                      value="person"
                    />
                    DIRECTOR
                  </label>
                </div>,
                <button
                  className="btn btn-primary btn-search"
                  type="submit"
                >
                  SEARCH
                </button>,
              ],
              "onSubmit": [Function],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "autoComplete": "off",
                  "defaultValue": "test",
                  "name": "searchLine",
                  "placeholder": "Pulp Fiction",
                  "type": "text",
                },
                "ref": [Function],
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span>
                      SEARCH BY
                    </span>,
                    <label
                      className="prop btn btn-primary"
                    >
                      <input
                        checked={true}
                        onChange={[Function]}
                        type="radio"
                        value="title"
                      />
                      TITLE
                    </label>,
                    <label
                      className="prop btn btn-basic"
                    >
                      <input
                        checked={false}
                        onChange={[Function]}
                        type="radio"
                        value="person"
                      />
                      DIRECTOR
                    </label>,
                  ],
                  "id": "search-props",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "SEARCH BY",
                    },
                    "ref": null,
                    "rendered": "SEARCH BY",
                    "type": "span",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <input
                          checked={true}
                          onChange={[Function]}
                          type="radio"
                          value="title"
                        />,
                        "TITLE",
                      ],
                      "className": "prop btn btn-primary",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": null,
                        "nodeType": "host",
                        "props": Object {
                          "checked": true,
                          "onChange": [Function],
                          "type": "radio",
                          "value": "title",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "input",
                      },
                      "TITLE",
                    ],
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <input
                          checked={false}
                          onChange={[Function]}
                          type="radio"
                          value="person"
                        />,
                        "DIRECTOR",
                      ],
                      "className": "prop btn btn-basic",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": null,
                        "nodeType": "host",
                        "props": Object {
                          "checked": false,
                          "onChange": [Function],
                          "type": "radio",
                          "value": "person",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "input",
                      },
                      "DIRECTOR",
                    ],
                    "type": "label",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "SEARCH",
                  "className": "btn btn-primary btn-search",
                  "type": "submit",
                },
                "ref": null,
                "rendered": "SEARCH",
                "type": "button",
              },
            ],
            "type": "form",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
